tweaks to work with realsense t265

--- a/docker/Dockerfile.realsense
+++ b/docker/Dockerfile.realsense
@@ -6,8 +6,9 @@ FROM ${BASE_IMAGE}
 COPY scripts/build-librealsense.sh /opt/realsense/build-librealsense.sh
 COPY scripts/install-realsense-dependencies.sh /opt/realsense/install-realsense-dependencies.sh
 
+
 RUN chmod +x /opt/realsense/install-realsense-dependencies.sh && /opt/realsense/install-realsense-dependencies.sh
-RUN chmod +x /opt/realsense/build-librealsense.sh && /opt/realsense/build-librealsense.sh
+RUN chmod +x /opt/realsense/build-librealsense.sh && /opt/realsense/build-librealsense.sh -v v2.53.1
 
 # Copy hotplug script which will get invoked whenever a devices plugged or un-plugged
 RUN mkdir -p /opt/realsense/
@@ -15,3 +16,4 @@ COPY scripts/hotplug-realsense.sh /opt/realsense/hotplug-realsense.sh
 
 # Copy custom udev rules file
 COPY udev_rules/99-realsense-libusb-custom.rules /etc/udev/rules.d/99-realsense-libusb-custom.rules
+# COPY udev_rules/99-realsense-libusb.rules /etc/udev/rules.d/99-realsense-libusb.rules
