--- a/docker/Dockerfile.ros2_humble
+++ b/docker/Dockerfile.ros2_humble
@@ -82,7 +82,6 @@ RUN mkdir -p ${ROS_ROOT}/src && \
     rosinstall_generator --deps --rosdistro ${ROS_DISTRO} ros_base \
         angles \
         apriltag \
-        behaviortree_cpp_v3 \
         bondcpp \
         camera_calibration_parsers \
         camera_info_manager \
@@ -146,7 +145,7 @@ RUN apt-get update && mkdir -p ${ROS_ROOT}/src && cd ${ROS_ROOT}/src \
 # Install nav2
 RUN apt-get update && mkdir -p ${ROS_ROOT}/src && cd ${ROS_ROOT}/src \
     && git clone https://github.com/ros-planning/navigation2.git && cd navigation2 && git checkout ec49c2772a0926c86ca83a4933c664744712e2e9 && cd .. \
-    && git clone https://github.com/BehaviorTree/BehaviorTree.CPP.git && cd BehaviorTree.CPP && git checkout a363bdcae88350bc748598a7d2950e300859469c && cd .. \
+    && git clone https://github.com/BehaviorTree/BehaviorTree.CPP.git && cd BehaviorTree.CPP && git checkout 3.8.4 && cd .. \
     && source ${ROS_ROOT}/setup.bash && cd ${ROS_ROOT} \
     && rosdep install -y -r --ignore-src --from-paths src --rosdistro ${ROS_DISTRO} \
     && colcon build --merge-install --cmake-args -DCMAKE_BUILD_TYPE=RelWithDebInfo --packages-up-to-regex nav2* --packages-ignore nav2_system_tests \
