--- a/docker/Dockerfile.mine
+++ b/docker/Dockerfile.mine
@@ -6,10 +6,27 @@ RUN apt-get update && apt-get install -y gir1.2-gstreamer-1.0 \
 	libgstreamer1.0-dev \
 	libgstreamer-plugins-base1.0-dev \
 	libgeographic-dev \
+	lsb-release wget less udev zstd sudo apt-transport-https build-essential \
 && rm -rf /var/lib/apt/lists/* \
 && apt-get clean \
 && python3 -m pip install -U \
         crc \
         pyserial \
         numpy==1.20 \
-        pytransform3d
+        pytransform3d \ 
+	protobuf
+
+RUN echo "# R${L4T_MAJOR_VERSION} (release), REVISION: ${L4T_MINOR_VERSION}.${L4T_PATCH_VERSION}" > /etc/nv_tegra_release ; \
+    wget -q --no-check-certificate -O ZED_SDK_Linux.run  https://download.stereolabs.com/zedsdk/4.0/l4t35.1/jetsons && \
+    chmod +x ZED_SDK_Linux.run ; ./ZED_SDK_Linux.run silent skip_tools && \
+    rm -rf /usr/local/zed/resources/* \
+    rm -rf ZED_SDK_Linux.run && \
+    rm -rf /var/lib/apt/lists/*
+
+RUN chmod -R 777 /usr/local/zed && \
+    chmod -R 777 /usr/local/lib/python3.8/dist-packages
+    
+
+#This symbolic link is needed to use the streaming features on Jetson inside a container
+RUN ln -sf /usr/lib/aarch64-linux-gnu/tegra/libv4l2.so.0 /usr/lib/aarch64-linux-gnu/libv4l2.so
+
