--- a/docker/Dockerfile.mine_x86
+++ b/docker/Dockerfile.mine_x86
@@ -26,3 +26,17 @@ RUN wget -q --no-check-certificate -O ZED_SDK_Linux.run https://download.stereol
 RUN chmod -R 777 /usr/local/zed && \
     chmod -R 777 /usr/local/lib/python3.8/dist-packages
     
+    
+RUN locale-gen en_US en_US.UTF-8
+RUN update-locale LC_ALL=en_US.UTF-8 LANG=en_US.UTF-8
+ENV LANG=en_US.UTF-8
+ENV ROS_PYTHON_VERSION=3
+ENV ROS_DISTRO=humble
+ENV ROS_ROOT=/opt/ros/${ROS_DISTRO}
+ENV RMW_IMPLEMENTATION=rmw_fastrtps_cpp
+    
+RUN curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key -o /usr/share/keyrings/ros-archive-keyring.gpg
+
+RUN echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros2-testing/ubuntu $(source /etc/os-release && echo $UBUNTU_CODENAME) main" | tee /etc/apt/sources.list.d/ros2.list > /dev/null
+
+RUN apt-get update && apt-get install -y ros-humble-rmw-cyclonedds-cpp
