--- a/docker/Dockerfile.mine_x86
+++ b/docker/Dockerfile.mine_x86
@@ -26,6 +26,7 @@ RUN wget -q --no-check-certificate -O ZED_SDK_Linux.run https://download.stereol
 RUN chmod -R 777 /usr/local/zed && \
     chmod -R 777 /usr/local/lib/python3.8/dist-packages
     
+COPY configs/* /usr/local/zed/settings/
     
 RUN locale-gen en_US en_US.UTF-8
 RUN update-locale LC_ALL=en_US.UTF-8 LANG=en_US.UTF-8
